# CodePlayground

./: .gitignore  .gitmessage.txt  LICENSE  README.en.md  README.md
C++/: .First.cpp.swp  a.out
CMakeTest/cmake-English_without_CMakeLists/01-basic/B-hello-headers/: CMakeLists.txt
CMakeTest/cmake-English_without_CMakeLists/01-basic/C-static-library/: CMakeLists.txt
CMakeTest/cmake_without_CMakeList/Demo3/: CMakeLists.txt  Makefile
CMakeTest/cmake_without_CMakeList/Demo3/math/: Makefile
CMakeTest/test_code_with_CMakeList/Demo1/: CMakeLists.txt
CodeDebug/: arr_addr.c  clock_gettime.c  config.xml  device_up_down.c  extra_tokens_at_end_of.c  fgets.c  is_process_alive.c  mac_to_upper.c  offset_http.c  offsetfile.c  p_test.c  pointer_pority_test.c  popen.c  read_specified_suffix.c  sizeof.c  sscanf_file.c  str_null.c  xor_key.c
CppTest/: Iterator.cpp  Linux读取指定后缀文件.c  Pthread_exit.c  assert.c  backtrace.c  char*.c  char*.cpp  cin.cpp  conv.c  fgets().c  fread2.c  getTime.c  getTimeOfDay.c  is_path.cpp  new_delete.cpp  offset2.cpp  pop_back.cpp  printX.c  snprintf.cpp  string.cpp  strncpy.cpp  strrchr.c  strstr.c  strtok.cpp  substr.cpp  timer.cpp  variable_parameter.c
C语言描述/: malloc  malloc.c  函数指针.c  尾递归  尾递归.c  指向指针的指针.c  数据集合与指针的计算.c  泛型指针.c
JS_HTML_Test/: index.html
LZW压缩算法/: LZW.c
MakefileTest/: AX1800 makefile分析.docx  makefile_variable
PythonTest/: change_mode_boa_dump.py  change_mode_without_internet.py  router_ap(2).py  router_ap.py
ShellTest/: 1.sh  2.sh  3.sh  IsFileExist.sh  IsForderEmpty.sh  IsForderEmpty1.sh  cal_ip.sh  cal_mask_bigger.sh  close_tuntx_tun1000.sh  if.sh  lp  main.c  module.c  my.sh  ping.sh  router_lan_down_up.sh  sha.sh  shell_compare_big.sh  tftp_boa.sh  while.sh
Vimrc/: mv_vimrc  my_vimrc  vimrc_simple  vimrc_without_plugin
bsearch/: bsearch1  bsearch1.c
debug_code/: big_end.c  char_array.c  debug.h  generate_random_str.c  getline.c  getopt.c  http.xml  if_else.c  ip_get.c  ipsec.c  macaddr.c  offset_http.c  open.c  printX.c  skip_space.c  sscanf_vs_strcpy.c  str.c  structure_body.c  test_syslog.c
debug_code/plugin/CUCC/test_client/: CMakeLists.txt  README.md  login_nocnce_app_test.txt  scram.py
debug_code/plugin/CUCC/test_client/genrsa/: CMakeLists.txt
debug_code/plugin/CUCC/test_client/ned_rsa_c/: rsa_op.c
processCommunication/: alarm_example  alarm_example.c  dup_example  dup_example.c  kill_example  kill_example.c  mkfifio_example  mkfifio_example.c  noname_pipe_example  noname_pipe_example.c  popen_example  popen_example.c  test
test/: fgets.c
test_client/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  key.c  prikey.pem  pubkey.pem  scram.cpp  scram_test  test_pub.key  unicomnw.cer  下挂设备页面接口.txt
test_cmake/PRIVATE_PUBLIC_INTERFACE/: CMakeLists.txt  app.cpp  bar_2.cpp  bar_2.h  foo_1.cpp
test_python/: .gitignore  change_mode_without_internet.py  test620.py
test_shell/: brctl.sh  cal_same_network.sh  cat.sh  check_process.sh  compare.sh  conntrack.sh  cpu.sh  for_test1.sh  getMac.sh  html.txt  id.txt  iptables_new.sh  logical_operator.sh  mem.sh  ps.sh  rw.sh  simple_tree.sh  stop_cap.sh  tmp_mem.txt  tree.sh  vmrss.sh  while1.sh  while_clean.sh
untitled folder/: Untitled 2.c  Untitled 2.cpp  Untitled 3.c  Untitled 3.cpp  Untitled 4.c  Untitled 4.cpp  Untitled 6.c  Untitled 7.c  Untitled.c  qsort  qsort1  qsort1.c  qsort2  qsort2.c  test  test.i  test.s
vimrc/: vimrc_kang  vimrc_my  vimrc_simple
华为机试/: 33人围成一圈，从1至N开始顺时针一直递增报数；报N者退出，下一位从1开始重新报数.c  回文串  回文串.cpp  循环右移  循环右移.c  明明的随机数1  明明的随机数1.cpp  明明的随机数多测试用例  明明的随机数多测试用例.cpp  最大差值.cpp  某人有8 角的邮票5 张，1 元的邮票4 张，1 元8 角的邮票6 张，用这些邮票中的一张或若干张可以得到多少中不同的邮资？  某人有8 角的邮票5 张，1 元的邮票4 张，1 元8 角的邮票6 张，用这些邮票中的一张或若干张可以得到多少中不同的邮资？.c  求区间[M,N]内的所有素数的个数1.c  求区间[M,N]内的所有素数的个数2.cpp  盈数.c  给定一个未排序的数列，找到此数列在已排序状态下的两个相邻值的最大差值.cpp  计算字符串最后一个单词的长度，单词以空格隔开.c  计算字符串最后一个单词的长度，单词以空格隔开.cpp
工作刷题/: dp1  dp1.cpp  sizeof  sizeof.c  堆排序.c  大数相乘.cpp  字符串反转.c  序列对最大.cpp  归并  归并.cpp  (+9 more)
(+1240 files in other folders)
